[package]
name = "irsa"
version = "0.1.0"
authors = ["Nym Seddon <unseddd@shh.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.3", default-features = false, features = ["alloc", "num-bigint"] }
rand = "0.7"
isha1 = { git = "https://github.com/unseddd/isha1", branch = "main" }
isha256 = { git = "https://github.com/unseddd/isha256", branch = "main" }
